cn/littleisle/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
        package cn.littleisle.parser;
        import cn.littleisle.ast.*;
        import cn.littleisle.entity.*;
        import cn.littleisle.type.*;
        import java.lang.reflect.*;
        import java.util.*;
        import java.io.*;

        public class Parser implements ParserConstants {

                static final public String SOURCE_ENCODING = "UTF-8";
                private String sourceName;

                static public AST parseFile(File file)
                        throws Exception {
                                try{
                                        BufferedReader r=new BufferedReader(
                                                        new InputStreamReader(new FileInputStream(file),SOURCE_ENCODING));
                                        return new Parser(r,"test").parse();
                                }
                                catch(FileNotFoundException ex){
                                        throw new Exception(ex.getMessage());
                                }

                        }
                public Parser(Reader s, String name){
                        this(s);
                        this.sourceName=name;

                }
                public AST parse()throws Exception{
                        try{
                                return compilation_unit();
                        }
                        catch(TokenMgrError err){
                                throw new Exception(err.getMessage());
                        }
                        catch(ParseException ex){
                                throw new Exception(ex.getMessage());
                        }
                }

                static public void main (String[] args){
                        File file=new File(args[0]);
                        try{
                                AST ast=parseFile(file);
                                ast.dump(System.out);
                        }
                        catch(Exception ex){
                                System.out.print(ex.getMessage());
                        }
                }

                protected Location location(Token t){
                        return new Location(sourceName,t);
                }

                private IntegerLiteralNode integerNode(Location loc,String image){
                        long i= integerValue(image);
                        if(image.endsWith("UL")){
                                return new IntegerLiteralNode(loc,IntegerTypeRef.ulongRef(),i);
                        }
                        else if (image.endsWith("L")){
                                return new IntegerLiteralNode(loc,IntegerTypeRef.longRef(),i);
                        }
                        else if (image.endsWith("U")){
                                return new IntegerLiteralNode(loc,IntegerTypeRef.uintRef(),i);
                        }
                        else {
                                return new IntegerLiteralNode(loc,IntegerTypeRef.intRef(),i);
                        }
                }
                private long integerValue(String image){
                        String s=image.replaceFirst("[UL]+","");
                        if(s.startsWith("0x")||s.startsWith("0X")){
                                return Long.parseLong(s.substring(2),16);
                        }
                        else if(s.startsWith("0")&&!s.equals("0")){
                                return Long.parseLong(s.substring(1),8);
                        }
                        else{
                                return Long.parseLong(s,10);
                        }
                }

//the whole pragram
  final public AST compilation_unit() throws ParseException {
    trace_call("compilation_unit");
    try {
        Token t;
        Declarations impdecls,decls;
                t=getToken(1);
      decls = top_defs();
      jj_consume_token(0);
                {if (true) return new AST(location(t),decls);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("compilation_unit");
    }
  }

  final public void import_stmts() throws ParseException {
    trace_call("import_stmts");
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        import_stmt();
      }
    } finally {
      trace_return("import_stmts");
    }
  }

  final public void import_stmt() throws ParseException {
    trace_call("import_stmt");
    try {
      jj_consume_token(IMPORT);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(42);
    } finally {
      trace_return("import_stmt");
    }
  }

  final public Declarations top_defs() throws ParseException {
    trace_call("top_defs");
    try {
        Declarations decls= new Declarations();
        StructNode defstruct;
        List<DefinedVariable> defvars;
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case CHAR:
        case INT:
        case SHORT:
        case LONG:
        case STATIC:
        case STRUCT:
        case UNION:
        case UNSIGNED:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        if (jj_2_1(3)) {
          defvars = defvars();
                                   decls.addDefvars(defvars);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STRUCT:
            defstruct = defstruct();
                                    decls.addDefstruct(defstruct);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
                {if (true) return decls;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("top_defs");
    }
  }

  final public List<DefinedVariable> defvars() throws ParseException {
    trace_call("defvars");
    try {
        List<DefinedVariable> defs =new ArrayList<DefinedVariable>();
        boolean priv;
        TypeNode type;
        String name;
        ExprNode init=null;
      priv = storage();
      type = type();
      name = name();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
        init = expr();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
                defs.add(new DefinedVariable(priv,type,name,init));
                init=null;
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 44:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(44);
        jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 43:
          jj_consume_token(43);
          expr();
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
      }
      jj_consume_token(42);
                {if (true) return defs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("defvars");
    }
  }

  final public DefinedFunction defun() throws ParseException {
    trace_call("defun");
    try {
        boolean priv;
        TypeRef ret;
        String n;
        Params ps;
        BlockNode body;
      priv = storage();
      ret = typeref();
      n = name();
      jj_consume_token(45);
      ps = params();
      jj_consume_token(46);
      body = block();
                TypeRef t= new FunctionTypeRef(ret,ps.parametersTypeRef());
                {if (true) return new DefinedFunction(priv,new TypeNode(t),n,ps,body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("defun");
    }
  }

  final public void defconst() throws ParseException {
    trace_call("defconst");
    try {
      jj_consume_token(CONST);
      typeref();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(43);
      expr();
      jj_consume_token(42);
    } finally {
      trace_return("defconst");
    }
  }

  final public StructNode defstruct() throws ParseException {
    trace_call("defstruct");
    try {
        Token t;
        String n;
        List<Slot> membs;
      t = jj_consume_token(STRUCT);
      n = name();
      membs = member_list();
      jj_consume_token(42);
                {if (true) return new StructNode(location(t),new StructTypeRef(n),n, membs);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("defstruct");
    }
  }

  final public String name() throws ParseException {
    trace_call("name");
    try {
 Token t;
      t = jj_consume_token(IDENTIFIER);
                        {if (true) return t.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("name");
    }
  }

  final public void defunion() throws ParseException {
    trace_call("defunion");
    try {
      jj_consume_token(UNION);
      jj_consume_token(IDENTIFIER);
      member_list();
      jj_consume_token(42);
    } finally {
      trace_return("defunion");
    }
  }

  final public void typedef() throws ParseException {
    trace_call("typedef");
    try {
      jj_consume_token(TYPEDEF);
      typeref();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(42);
    } finally {
      trace_return("typedef");
    }
  }

  final public List<Slot> member_list() throws ParseException {
    trace_call("member_list");
    try {
        List<Slot> membs = new ArrayList<Slot>();
        Slot s;
      jj_consume_token(47);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case CHAR:
        case INT:
        case SHORT:
        case LONG:
        case STRUCT:
        case UNION:
        case UNSIGNED:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        s = slot();
        jj_consume_token(42);
                          membs.add(s);
      }
      jj_consume_token(48);
                {if (true) return membs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("member_list");
    }
  }

  final public Slot slot() throws ParseException {
    trace_call("slot");
    try {
        TypeNode t;
        String n;
      t = type();
      n = name();
                          {if (true) return new Slot(t,n);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("slot");
    }
  }

  final public TypeNode type() throws ParseException {
    trace_call("type");
    try {
        TypeRef ref;
      ref = typeref();
                      {if (true) return new TypeNode(ref);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("type");
    }
  }

  final public boolean storage() throws ParseException {
    trace_call("storage");
    try {
        Token t=null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
        t = jj_consume_token(STATIC);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
                     {if (true) return (t==null?false:true);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("storage");
    }
  }

  final public void params() throws ParseException {
    trace_call("params");
    try {
      if (jj_2_2(2147483647)) {
        jj_consume_token(VOID);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case CHAR:
        case INT:
        case SHORT:
        case LONG:
        case STRUCT:
        case UNION:
        case UNSIGNED:
          fixedparams();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 44:
            jj_consume_token(44);
            jj_consume_token(49);
            break;
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("params");
    }
  }

  final public void fixedparams() throws ParseException {
    trace_call("fixedparams");
    try {
      param();
      label_5:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(44);
        param();
      }
    } finally {
      trace_return("fixedparams");
    }
  }

  final public void param() throws ParseException {
    trace_call("param");
    try {
      typeref();
      jj_consume_token(IDENTIFIER);
    } finally {
      trace_return("param");
    }
  }

  final public TypeRef typeref() throws ParseException {
    trace_call("typeref");
    try {
        TypeRef ref;
        Token t;
        ParamTypeRefs params;
      ref = typeref_base();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
        case 52:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          jj_consume_token(50);
          jj_consume_token(INTEGER);
          jj_consume_token(51);
          break;
        case 52:
          jj_consume_token(52);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                        {if (true) return ref;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("typeref");
    }
  }

  final public TypeRef typeref_base() throws ParseException {
    trace_call("typeref_base");
    try {
        Token t, name;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        t = jj_consume_token(VOID);
                           {if (true) return new VoidTypeRef(location(t));}
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case INT:
        t = jj_consume_token(INT);
                          {if (true) return IntegerTypeRef.intRef(location(t));}
        break;
      case SHORT:
        jj_consume_token(SHORT);
        break;
      case LONG:
        jj_consume_token(LONG);
        break;
      default:
        jj_la1[12] = jj_gen;
        if (jj_2_4(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(CHAR);
        } else if (jj_2_5(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(INT);
        } else if (jj_2_6(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(SHORT);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UNSIGNED:
            jj_consume_token(UNSIGNED);
            jj_consume_token(LONG);
            break;
          case STRUCT:
            jj_consume_token(STRUCT);
            jj_consume_token(IDENTIFIER);
            break;
          case UNION:
            jj_consume_token(UNION);
            jj_consume_token(IDENTIFIER);
            break;
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("typeref_base");
    }
  }

  final public BlockNode block() throws ParseException {
    trace_call("block");
    try {
        Token t;
        List<DefinedVariable> vars;
        List<StmtNode> stmts;
      t = jj_consume_token(47);
      vars = defvar_list();
      stmts = stmts();
      jj_consume_token(48);
                {if (true) return new BlockNode(location(t),vars,stmts);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("block");
    }
  }

  final public List<DefinedVariable> defvar_list() throws ParseException {
    trace_call("defvar_list");
    try {
List<DefinedVariable> result= new ArrayList<DefinedVariable>();
List<DefinedVariable> vars;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case CHAR:
        case INT:
        case SHORT:
        case LONG:
        case STATIC:
        case STRUCT:
        case UNION:
        case UNSIGNED:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_7;
        }
        vars = defvars();
                         result.addAll(vars);
      }
                        {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("defvar_list");
    }
  }

  final public List<StmtNode> stmts() throws ParseException {
    trace_call("stmts");
    try {
List<StmtNode> ss=new ArrayList<StmtNode>();
StmtNode s;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHARACTER:
        case STRING:
        case IF:
        case WHILE:
        case FOR:
        case BREAK:
        case RETURN:
        case SWITCH:
        case CONTINUE:
        case GOTO:
        case DO:
        case SIZEOF:
        case IDENTIFIER:
        case INTEGER:
        case 42:
        case 45:
        case 47:
        case 52:
        case 75:
        case 78:
        case 79:
        case 82:
        case 83:
        case 84:
        case 85:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_8;
        }
        s = stmt();
                   if(s!=null)ss.add(s);
      }
                {if (true) return ss;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("stmts");
    }
  }

  final public StmtNode stmt() throws ParseException {
    trace_call("stmt");
    try {
        StmtNode n=null;
        ExprNode e=null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 42:
        jj_consume_token(42);
        break;
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_7(2)) {
          labeled_stmt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CHARACTER:
          case STRING:
          case SIZEOF:
          case IDENTIFIER:
          case INTEGER:
          case 45:
          case 52:
          case 75:
          case 78:
          case 79:
          case 82:
          case 83:
          case 84:
          case 85:
            e = expr();
            break;
          case 47:
            n = block();
            break;
          case IF:
            n = if_stmt();
            break;
          case WHILE:
            while_stmt();
            break;
          case DO:
            dowhile_stmt();
            break;
          case FOR:
            for_stmt();
            break;
          case SWITCH:
            switch_stmt();
            break;
          case BREAK:
            break_stmt();
            break;
          case CONTINUE:
            continue_stmt();
            break;
          case GOTO:
            goto_stmt();
            break;
          case RETURN:
            return_stmt();
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
                {if (true) return n;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("stmt");
    }
  }

  final public void labeled_stmt() throws ParseException {
    trace_call("labeled_stmt");
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(53);
      stmt();
    } finally {
      trace_return("labeled_stmt");
    }
  }

  final public IfNode if_stmt() throws ParseException {
    trace_call("if_stmt");
    try {
        Token t;
        ExprNode cond;
        Stmt thenBody,elseBody=null;
      //lookahead(1) to avoid else conflict
              t = jj_consume_token(IF);
      jj_consume_token(45);
      cond = expr();
      jj_consume_token(46);
      thenBody = stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        elseBody = stmt();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
                        {if (true) return new IfNode(location(t),cond,thenBody,elseBody);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("if_stmt");
    }
  }

  final public void while_stmt() throws ParseException {
    trace_call("while_stmt");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(45);
      expr();
      jj_consume_token(46);
      stmt();
    } finally {
      trace_return("while_stmt");
    }
  }

  final public void dowhile_stmt() throws ParseException {
    trace_call("dowhile_stmt");
    try {
      jj_consume_token(DO);
      stmt();
      jj_consume_token(WHILE);
      jj_consume_token(45);
      expr();
      jj_consume_token(46);
      jj_consume_token(42);
    } finally {
      trace_return("dowhile_stmt");
    }
  }

  final public void for_stmt() throws ParseException {
    trace_call("for_stmt");
    try {
      jj_consume_token(FOR);
      jj_consume_token(45);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
      case STRING:
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case 45:
      case 52:
      case 75:
      case 78:
      case 79:
      case 82:
      case 83:
      case 84:
      case 85:
        expr();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(42);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
      case STRING:
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case 45:
      case 52:
      case 75:
      case 78:
      case 79:
      case 82:
      case 83:
      case 84:
      case 85:
        expr();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(42);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
      case STRING:
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case 45:
      case 52:
      case 75:
      case 78:
      case 79:
      case 82:
      case 83:
      case 84:
      case 85:
        expr();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      jj_consume_token(46);
      stmt();
    } finally {
      trace_return("for_stmt");
    }
  }

  final public void switch_stmt() throws ParseException {
    trace_call("switch_stmt");
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(45);
      expr();
      jj_consume_token(46);
      jj_consume_token(47);
      case_clauses();
      jj_consume_token(48);
    } finally {
      trace_return("switch_stmt");
    }
  }

  final public void case_clauses() throws ParseException {
    trace_call("case_clauses");
    try {
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_9;
        }
        case_clause();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFAULT_:
        default_clause();
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
    } finally {
      trace_return("case_clauses");
    }
  }

  final public void case_clause() throws ParseException {
    trace_call("case_clause");
    try {
      cases();
      case_body();
    } finally {
      trace_return("case_clause");
    }
  }

  final public void cases() throws ParseException {
    trace_call("cases");
    try {
      label_10:
      while (true) {
        jj_consume_token(CASE);
        jj_consume_token(53);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_10;
        }
      }
    } finally {
      trace_return("cases");
    }
  }

  final public void default_clause() throws ParseException {
    trace_call("default_clause");
    try {
      jj_consume_token(DEFAULT_);
      jj_consume_token(53);
      case_body();
    } finally {
      trace_return("default_clause");
    }
  }

  final public void case_body() throws ParseException {
    trace_call("case_body");
    try {
      label_11:
      while (true) {
        stmt();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHARACTER:
        case STRING:
        case IF:
        case WHILE:
        case FOR:
        case BREAK:
        case RETURN:
        case SWITCH:
        case CONTINUE:
        case GOTO:
        case DO:
        case SIZEOF:
        case IDENTIFIER:
        case INTEGER:
        case 42:
        case 45:
        case 47:
        case 52:
        case 75:
        case 78:
        case 79:
        case 82:
        case 83:
        case 84:
        case 85:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_11;
        }
      }
    } finally {
      trace_return("case_body");
    }
  }

  final public void break_stmt() throws ParseException {
    trace_call("break_stmt");
    try {
      jj_consume_token(BREAK);
      jj_consume_token(42);
    } finally {
      trace_return("break_stmt");
    }
  }
